--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "optimize-images": "node src/scripts/utils/sharp.js",
+    "optimize-images": "node src/scripts/utils/sharpdico.js",
     "start-dev": "webpack serve --config webpack.dev.js",
     "build": "webpack --config webpack.prod.js",
     "serve": "http-server dist",
@@ -11,7 +11,8 @@
     "test": "jest",
     "test:watch": "jest --watchAll",
     "lint": "eslint ./src",
-    "analyze": "ANALYZE=true npm run build"
+    "analyze": "ANALYZE=true npm run build",
+    "e2e": "codeceptjs run --steps"
   },
   "keywords": [],
   "author": "danusetawiardana@gmail.com>",
@@ -42,7 +43,7 @@
     "imagemin-pngquant": "^10.0.0",
     "imagemin-webp-webpack-plugin": "^3.3.6",
     "imagemin-webpack-plugin": "^2.4.2",
-    "jest": "^29.6.1",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "mini-css-extract-plugin": "^2.9.2",
     "playwright": "^1.49.0",
@@ -71,7 +72,8 @@
     "browserslist": "^4.24.2",
     "idb": "^8.0.0",
     "lazysizes": "^5.3.2",
-    "regenerator-runtime": "^0.14.0"
+    "regenerator-runtime": "^0.14.0",
+    "sweetalert2": "^11.14.5"
   },
   "directories": {
     "test": "tests"
